yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
# set your user name
  name: tyalon-hello-world1
spec:
  replicas: 3
  selector:
    matchLabels:
# set your user name
      app: tyalon-hello-world1
  template:
    metadata:
      labels:
# set your user name
        app: tyalon-hello-world1
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: hello-world1
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
# update with the iamge you build in part 1
          image: 'quay.io/tyalon/app1:v2'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
