yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
# set your user name
  name:  tyalon-hello-world1
spec:
  to:
    kind: Service
# set your user name
    name:  tyalon-hello-world1
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
